<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SLOW</string>

    <string name="new_user_sign_up"><u>New user?  Sign up</u></string>
    <string name="sign_in_btn"><u>Already Registered? Sign in</u></string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="finish">ProgressBar is finished.</string>
    <string name="book_ambulance">Book Ambulance</string>
    <string name="hometitle">Book Ambulance</string>
    <string name="title_activity_maps">Map</string>

    <string name="sign_in_with_google">Sign in with Google !!!</string>
    <string name="choose_language">Choose Language</string>
    <string name="username">UserName</string>














    <string name="title_medicine_name" tools:ignore="MissingTranslation">Medicine Name</string>
    <string name="hint_enter_med_name" tools:ignore="MissingTranslation">Enter Medicine</string>
    <string name="medicine_days" tools:ignore="MissingTranslation">Medicine Days</string>
    <string name="title_treatment_deadline" tools:ignore="MissingTranslation">Treatment deadline</string>
    <string name="title_continuous_use" tools:ignore="MissingTranslation">Continuous use</string>
    <string name="title_reminder" tools:ignore="MissingTranslation">Reminder</string>
    <string name="new_medicine" tools:ignore="MissingTranslation">NEW MEDICINE</string>
    <string name="every_day" tools:ignore="MissingTranslation">Every day</string>
    <string name="no_medicine_added" tools:ignore="MissingTranslation">No Medicine Added</string>
    <string name="loading_tasks_error" tools:ignore="MissingTranslation">Error while loading medicineAlarms</string>
    <string name="successfully_saved_me_message" tools:ignore="MissingTranslation">Medicine Added Scuccessfully</string>
    <string name="reminder_message" tools:ignore="MissingTranslation">It\'s Time to take your medicine</string>
    <string name="ignored" tools:ignore="MissingTranslation">IGNORED</string>
    <string name="taken" tools:ignore="MissingTranslation">TAKEN</string>
    <string name="all" tools:ignore="MissingTranslation">ALL</string>
    <string name="menu_filter" tools:ignore="MissingTranslation">Filter</string>
    <string name="all_label" tools:ignore="MissingTranslation">All Medicines</string>
    <string name="ignore_label" tools:ignore="MissingTranslation">Medicines Ignored</string>
    <string name="taken_label" tools:ignore="MissingTranslation">Medicine Taken</string>
    <string name="no_history" tools:ignore="MissingTranslation">No History Found</string>
    <string name="no_taken_med_history" tools:ignore="MissingTranslation">You have not taken any medicine</string>
    <string name="no_ignored_history" tools:ignore="MissingTranslation">Well Done</string>
    <string name="menu_stats" tools:ignore="MissingTranslation">Monthly Report</string>







</resources>
