<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    android:background="@drawable/background"
    >
     <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="@dimen/activity_vertical_margin"



         >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:src="@drawable/appicon"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:ems="1"
            android:inputType="textEmailAddress"
            android:hint="@string/username"
            android:background="@drawable/back"
            android:id="@+id/login_id"
            android:drawablePadding="78dp"
            android:textColorHint="#fff"
            android:drawableLeft="@drawable/ic_person_white_24dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:ems="1"
            android:inputType="textPassword"
            android:hint="......"

            android:id="@+id/login_password"
            android:textColorHint="#fff"
            android:background="@drawable/back"
            android:drawablePadding="78dp"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in_btn"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:id="@+id/sign_in_btn"
            android:background="@drawable/background_login_two"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:layout_marginTop="26dp"
            />

        <TextView
            android:id="@+id/signuptext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/new_user_sign_up"
            android:textAlignment="center"
            android:textColor="#fff" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="#6ef4f4f4" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in_with_google"
            android:id="@+id/sign_in_btn_google"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:background="@drawable/googlebtnback"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:layout_marginTop="16dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/choose_language"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:id="@+id/Btn"
            android:background="@drawable/background_login_two"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:layout_marginTop="26dp"
            />


    </LinearLayout>

</ScrollView>